--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ header nav ul li a {
 
 .destination {
     display: inline-block;
-    width: 23%;
+    width: 100%;
     margin: 1%;
     vertical-align: top;
 }
@@ -151,15 +151,8 @@ header nav ul li a {
     padding-right: 2em;
 }
 
-
-
 .about img {
-    width: 100%;.about-image img {
-        border: 2px solid green;
-        float: right;
-        margin-left: 1em; 
-    }
-    
+    width: 100%;
     height: auto;
 }
 
@@ -181,7 +174,7 @@ header nav ul li a {
 
 .districts .district {
     display: inline-block;
-    width: 30%;
+    width: 100%;
     margin: 1%;
     text-align: center;
 }
@@ -226,7 +219,6 @@ header nav ul li a {
     margin: 0 auto;
     box-shadow: 0 0 10px rgba(0,0,0,0.3); 
     padding: 2em;
-
 }
 
 .enquiry label {
@@ -247,15 +239,116 @@ header nav ul li a {
     color: #fff;
     cursor: pointer;
 }
+
 .logo {
     border-radius: 50%;
     overflow: hidden;
     width: 50px; 
     height: 50px; 
 }
+
 .logo img {
     width: 100%;
     height: 100%;
     object-fit: cover; 
 }
+
+/* Responsive Styles */
+@media (min-width: 600px) {
+    .destination {
+        width: 48%;
+    }
+    .districts .district {
+        width: 48%;
+    }
+}
+
+@media (min-width: 768px) {
+    .destination {
+        width: 32%;
+    }
+    .districts .district {
+        width: 32%;
+    }
+}
+
+@media (min-width: 1024px) {
+    .destination {
+        width: 23%;
+    }
+    .districts .district {
+        width: 23%;
+    }
+}
+
+@media (max-width: 768px) {
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+        background-color: rgba(51, 51, 51, 0.8);
+        position: absolute;
+        top: 100%;
+        left: 0;
+    }
+
+    .nav-links.active {
+        display: flex;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+}
+
+/* Default hamburger menu hidden */
+.hamburger {
+    display: none;
+}
+
+.hamburger .bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    background-color: #fff;
+    transition: all 0.3s;
+}
+
+.hamburger .bar {
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    background-color: #fff;
+    transition: all 0.3s;
+}
+
+.hamburger {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+        background-color: rgba(51, 51, 51, 0.8);
+        position: absolute;
+        top: 100%;
+        left: 0;
+    }
+
+    .nav-links.active {
+        display: flex;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+}
+
 
